# mkshift

./: .gitignore  .gitmodules  Doxyfile  Makefile.am  README.md  ar.sh  configure.ac  include.am  link_flags.in
docs/: .gitignore
libs/yoga/: .gitignore  Makefile.am  compile_flags.txt  configure.ac  include.am
libs/yoga/src/: dummy.cpp
mkshift/: collision.cpp  collision.hpp  layout.cpp  layout.hpp
